Import revision of process.html from Wordpress revision

--- a/policies/process.html
+++ b/policies/process.html
@@ -189,19 +189,27 @@ Some (but not all) Community Group and Business Group Specifications are expecte
 <ul>
  	<li><strong>Continuity of IPR commitments</strong>. The <a href="final">W3C Community Final Specification Agreement</a> is designed to ensure smooth transition of IPR commitments from Community Groups or Business Groups to Working Groups.</li>
  	<li id="participanttrans"><strong>Continuity of participation</strong>. When a Working Group takes up a Community Group or Business Group Specification, non-Member employees may continue their participation in the Working Group for a limited duration while their employer makes the transition to Membership. The individual’s employer must have fulfilled the organizational patent requirements of the <a href="final">W3C Community Final Specification Agreement</a>.</li>
- 	<li><strong>Simplified charter template</strong>. If the mission of a new Working Group is simply to advance a Community Group or Business Group Specification to Recommendation, W3C will provide a simplified charter template. Working Group charters created to standardize a Community Group or Business Group Specifications are be reviewed by the Membership following the usual process.</li>
+ 	<li><strong>Adoption by a Working Group</strong>. If W3C has chartered a Working Group with a scope that encompasses the deliverable of a Community Group, the Working Group <a href="https://www.w3.org/2020/Process-20200915/#CharterReview">may adopt it without needing to recharter</a>. Working Group charters created to standardize a Community Group or Business Group Specifications are be reviewed by the Membership following the usual process.</li>
 </ul>
-</section>
-<section>
+See <a href="https://www.w3.org/Guide/process/cg-transition.html">How to transition work from a Community Group to a Working Group</a> for more information.
+
+</section><section>
 <h4 id="parallel">Parallel Activities between a Community Group and a Working Group</h4>
 A Community Group may continue to exist after a Working Group has been chartered. The Community Group may wish to start experimenting with new ideas for a technology while the Working Group builds consensus and focuses on implementation of a stable set of agreed upon features.
 
 W3C recommends that once a Working Group has taken up a Community Group or Business Group Specification, the Community or Business Group should no longer develop the same material in parallel. Working Group licensing commitments are limited to the deliverables of the Working Group, so commitments do not follow text that is taken up by other groups (Community Groups or Working Groups).
 
-</section></div>
-<div id="bgroups" class="tab-content">
-<section class="dark-blue">
-<p id="business-process">Business Groups are open to all (including companies, non-profits, government agencies, research institutes, individuals), but parties that are not W3C Members pay a <a href="/community/about/agreements/fees/">fee</a> to participate. That fee is less than W3C Membership and grants fewer benefits. Business Groups are designed to provide stakeholders in particular industries with a forum to develop industry-specific applications of Web technology, to create a strong liaison between a particular industry and the Web community, or to solve an industry-specific issue without an initial assumption of which Web technologies apply.</p>
+</section><a href="https://www.w3.org/Guide/process/cg-transition.html"></a>
+
+</div>
+<a href="https://www.w3.org/Guide/process/cg-transition.html">
+</a>
+<div id="bgroups" class="tab-content"><a href="https://www.w3.org/Guide/process/cg-transition.html">
+</a>
+
+<section class="dark-blue"><a href="https://www.w3.org/Guide/process/cg-transition.html">
+</a>
+<p id="business-process"><a href="https://www.w3.org/Guide/process/cg-transition.html">Business Groups are open to all (including companies, non-profits, government agencies, research institutes, individuals), but parties that are not W3C Members pay a </a><a href="/community/about/agreements/fees/">fee</a> to participate. That fee is less than W3C Membership and grants fewer benefits. Business Groups are designed to provide stakeholders in particular industries with a forum to develop industry-specific applications of Web technology, to create a strong liaison between a particular industry and the Web community, or to solve an industry-specific issue without an initial assumption of which Web technologies apply.</p>
 Business Group policies are the same as Community Groups except where noted below.
 
 </section>
