Import revision of process.html from Wordpress revision

--- a/policies/process.html
+++ b/policies/process.html
@@ -185,7 +185,7 @@ The Council promotes broad inclusion and participation by newcomers in a variety
 </section>
 <section>
 <h3 id="transition" class="handwriting red">Transition to W3C Standards Track</h3>
-Some (but not all) Community Group and Business Group Specifications are expected to serve as input to a Working Group. W3C facilitates the transition from Community Group to the W3C Standards Track in a number of ways:
+Some (but not all) Community Group and Business Group Specifications are expected to serve as input to a Working Group. When a Community Group or Business Group wishes for a Working Group to adopt one of its Specifications, W3C facilitates the transition to the W3C Standards Track in a number of ways:
 <ul>
  	<li><strong>Continuity of IPR commitments</strong>. The <a href="final">W3C Community Final Specification Agreement</a> is designed to ensure smooth transition of IPR commitments from Community Groups or Business Groups to Working Groups.</li>
  	<li id="participanttrans"><strong>Continuity of participation</strong>. When a Working Group takes up a Community Group or Business Group Specification, non-Member employees may continue their participation in the Working Group for a limited duration while their employer makes the transition to Membership. The individual’s employer must have fulfilled the organizational patent requirements of the <a href="final">W3C Community Final Specification Agreement</a>.</li>
