Import revision of process.html from Wordpress revision

--- a/policies/process.html
+++ b/policies/process.html
@@ -86,7 +86,7 @@ Each Community Group <span class="rfc2119">must</span> have at least one Chair w
 </section>
 <section>
 <h3 id="duration" class="handwriting red">Duration and Closure of a Community Group</h3>
-Once a Community Group has been launched, participants may continue to work indefinitely, until the Community Development Lead closes the group; see the <a href="#grounds">grounds for closure</a>.
+Once a Community Group has been launched, participants may continue to work indefinitely, until the Community Development Lead closes the group; see the <a href="#closure">grounds for closure</a>.
 
 No less than ten business days before closing a group, the Community Development Lead <span class="rfc2119">must</span> alert the participants. Once closed, no individuals may join, and discussions stop. However, W3C makes available information about closed Community Groups and archives of their communications.
 
@@ -193,7 +193,8 @@ Some (but not all) Community Group and Business Group Specifications are expecte
 </ul>
 See <a href="https://www.w3.org/Guide/process/cg-transition.html">How to transition work from a Community Group to a Working Group</a> for more information.
 
-</section><section>
+</section>
+<section>
 <h4 id="parallel">Parallel Activities between a Community Group and a Working Group</h4>
 A Community Group may continue to exist after a Working Group has been chartered. The Community Group may wish to start experimenting with new ideas for a technology while the Working Group builds consensus and focuses on implementation of a stable set of agreed upon features.
 
