--- a/policies/reqs.html
+++ b/policies/reqs.html
@@ -1,6 +1,8 @@
 <!doctype html><html lang=en><title>Report Requirements</title><body>This page provides the details behind the <a href="/community/about/agreements/#comm-deliverables">requirements of the Community and Business Group Process</a> related to deliverables.
 <h2>Formal Identification</h2>
 W3C provides a means for each group Chair to publish and thereby designate the group's Reports (as defined in the CLA and FSA). These reports are listed on the group's home page.
+
+Final Reports must be published on the W3C Web site. This can be achieved through <a href="https://github.com/w3c/cg-reports">mechanisms available on GitHub</a>.
 <h2>Style Sheets</h2>
 Robin Berjon's <a href="http://dev.w3.org/2009/dap/ReSpec.js/documentation.html">ReSpec.js</a> is widely used at W3C for creating specifications, and it includes four style sheets (for draft and final reports, both for Community and Business Groups); set specStatus in the configuration accordingly (e.g., specStatus = CG-DRAFT). A <a href="//www.w3.org/community/src/css/spec/sample">sample report</a> illustrates their usage and several documents using ReSpec are linked from the <a href="/community/reports/">reports page</a>. Please note that ReSpec is not required, but is a useful option for editors.
 <h2>W3C Logo</h2>
