Import revision of reqs.html from Wordpress revision

--- a/policies/reqs.html
+++ b/policies/reqs.html
@@ -4,7 +4,7 @@ W3C provides a means for each group Chair to publish and thereby designate the g
 
 Final Reports must be published on the W3C Web site. This can be achieved through <a href="https://github.com/w3c/cg-reports">mechanisms available on GitHub</a>.
 <h2>Style Sheets</h2>
-Robin Berjon's <a href="http://dev.w3.org/2009/dap/ReSpec.js/documentation.html">ReSpec.js</a> is widely used at W3C for creating specifications, and it includes four style sheets (for draft and final reports, both for Community and Business Groups); set specStatus in the configuration accordingly (e.g., specStatus = CG-DRAFT). A <a href="//www.w3.org/community/src/css/spec/sample">sample report</a> illustrates their usage and several documents using ReSpec are linked from the <a href="/community/reports/">reports page</a>. Please note that ReSpec is not required, but is a useful option for editors.
+<a href="http://dev.w3.org/2009/dap/ReSpec.js/documentation.html">ReSpec</a> is a widely used tool at W3C for creating specifications, and it includes four style sheets (for draft and final reports, both for Community and Business Groups); set specStatus in the configuration accordingly (e.g., specStatus = CG-DRAFT). Several documents using ReSpec are linked from the <a href="/community/reports/">reports page</a>. Please note that ReSpec is not required, but is a useful option for editors.
 <h2>W3C Logo</h2>
 The W3C logo appears in the upper left corner of the document using this markup in HTML5:
 <pre>&lt;a href=http://www.w3.org/&gt;&lt;img alt=W3C height=48 src=http://www.w3.org/Icons/w3c_home width=72&gt;&lt;/a&gt;
