Import revision of reqs.html from Wordpress revision

--- a/policies/reqs.html
+++ b/policies/reqs.html
@@ -4,14 +4,14 @@ W3C provides a means for each group Chair to publish and thereby designate the g
 
 Final Reports must be published on the W3C Web site. This can be achieved through <a href="https://github.com/w3c/cg-reports">mechanisms available on GitHub</a>.
 <h2>Style Sheets</h2>
-<a href="http://dev.w3.org/2009/dap/ReSpec.js/documentation.html">ReSpec</a> is a widely used tool at W3C for creating specifications, and it includes four style sheets (for draft and final reports, both for Community and Business Groups); set specStatus in the configuration accordingly (e.g., specStatus = CG-DRAFT). Several documents using ReSpec are linked from the <a href="/community/reports/">reports page</a>. Please note that ReSpec is not required, but is a useful option for editors.
+<a href="https://github.com/w3c/respec/wiki">ReSpec</a> is a widely used tool at W3C for creating specifications, and it includes four style sheets (for draft and final reports, both for Community and Business Groups); set specStatus in the configuration accordingly (e.g., specStatus = CG-DRAFT). Several documents using ReSpec are linked from the <a href="/community/reports/">reports page</a>. Please note that ReSpec is not required, but is a useful option for editors.
 <h2>W3C Logo</h2>
 The W3C logo appears in the upper left corner of the document using this markup in HTML5:
-<pre>&lt;a href=http://www.w3.org/&gt;&lt;img alt=W3C height=48 src=http://www.w3.org/Icons/w3c_home width=72&gt;&lt;/a&gt;
+<pre>&lt;a href=https://www.w3.org/&gt;&lt;img alt=W3C height=48 src=https://www.w3.org/Icons/w3c_home width=72&gt;&lt;/a&gt;
 </pre>
 or in XHTML:
-<pre>&lt;a href="http://www.w3.org/"&gt;&lt;img alt="W3C" height="48"
-   src="http://www.w3.org/Icons/w3c_home" width="72"/&gt;&lt;/a&gt;
+<pre>&lt;a href="https://www.w3.org/"&gt;&lt;img alt="W3C" height="48"
+   src="https://www.w3.org/Icons/w3c_home" width="72"/&gt;&lt;/a&gt;
 </pre>
 <h2>Name and Date</h2>
 The report must include:
@@ -26,25 +26,25 @@ The copyright statement to include at the top of each report
 varies depending on whether the document is a draft or final report. In the boilerplate below please replace YEAR(s) (with a single year or range), the name of the report, the URI to the group's home page ("groupname"), and the Group Name.
 
 For draft reports, based on the <a href="/community/about/agreements/cla-deed/">CLA Deed</a>, please use this markup (adjustments for HTML5 ok):
-<pre>&lt;p&gt;Copyright © YEAR(S) the Contributors to the REPORT NAME/VERSION, published by the  &lt;a href="http://www.w3.org/community/grouphome/"&gt;Group Name&lt;/a&gt; under the &lt;a href="http://www.w3.org/community/about/agreements/cla/"&gt;W3C Community Contributor License Agreement (CLA)&lt;/a&gt;. A human-readable &lt;a href="http://www.w3.org/community/about/agreements/cla-deed/"&gt;summary&lt;/a&gt; is available.
+<pre>&lt;p&gt;Copyright © YEAR(S) the Contributors to the REPORT NAME/VERSION, published by the  &lt;a href="https://www.w3.org/community/grouphome/"&gt;Group Name&lt;/a&gt; under the &lt;a href="https://www.w3.org/community/about/agreements/cla/"&gt;W3C Community Contributor License Agreement (CLA)&lt;/a&gt;. A human-readable &lt;a href="https://www.w3.org/community/about/agreements/cla-deed/"&gt;summary&lt;/a&gt; is available.
 &lt;/p&gt;
 </pre>
 For final reports, based on the <a href="/community/about/agreements/fsa-deed/">FSA Deed</a>, please use this markup (adjustments for HTML5 ok):
-<pre>&lt;p&gt;Copyright © YEAR(S) the Contributors to the REPORT NAME/VERSION, published by the  &lt;a href="http://www.w3.org/community/grouphome/"&gt;Group Name&lt;/a&gt; under the &lt;a href="http://www.w3.org/community/about/agreements/final/"&gt;W3C Community Final Specification Agreement (FSA)&lt;/a&gt;. A human-readable &lt;a href="http://www.w3.org/community/about/agreements/fsa-deed/"&gt;summary&lt;/a&gt; is available.
+<pre>&lt;p&gt;Copyright © YEAR(S) the Contributors to the REPORT NAME/VERSION, published by the  &lt;a href="https://www.w3.org/community/grouphome/"&gt;Group Name&lt;/a&gt; under the &lt;a href="https://www.w3.org/community/about/agreements/final/"&gt;W3C Community Final Specification Agreement (FSA)&lt;/a&gt;. A human-readable &lt;a href="https://www.w3.org/community/about/agreements/fsa-deed/"&gt;summary&lt;/a&gt; is available.
 &lt;/p&gt;
 </pre>
 <h2>Boilerplate</h2>
 In the boilerplate below please replace the URI to the group's home page ("groupname"), and the Group Name.
 
 The following paragraph appears at the top of each draft report:
-<pre>&lt;p&gt;This report was published by the &lt;a href="http://www.w3.org/community/grouphome/"&gt;Group Name&lt;/a&gt;. It is not a W3C Standard nor is it on the W3C Standards Track. Please note that under the &lt;a href="http://www.w3.org/community/about/agreements/cla/"&gt;W3C Community Contributor License Agreement (CLA)&lt;/a&gt; there is a limited opt-out and other conditions apply. Learn more about &lt;a href="http://www.w3.org/community/"&gt;W3C Community and Business Groups&lt;/a&gt;.&lt;/p&gt;
+<pre>&lt;p&gt;This report was published by the &lt;a href="https://www.w3.org/community/grouphome/"&gt;Group Name&lt;/a&gt;. It is not a W3C Standard nor is it on the W3C Standards Track. Please note that under the &lt;a href="https://www.w3.org/community/about/agreements/cla/"&gt;W3C Community Contributor License Agreement (CLA)&lt;/a&gt; there is a limited opt-out and other conditions apply. Learn more about &lt;a href="https://www.w3.org/community/"&gt;W3C Community and Business Groups&lt;/a&gt;.&lt;/p&gt;
 </pre>
 The following paragraph appears at the top of each final report:
-<pre>&lt;p&gt;This report was published by the &lt;a href="http://www.w3.org/community/grouphome/"&gt;Group Name&lt;/a&gt;. It is not a W3C Standard nor is it on the W3C Standards Track. Please note that under the &lt;a href="http://www.w3.org/community/about/agreements/final/"&gt;W3C Community Final Specification Agreement (FSA)&lt;/a&gt; other conditions apply. Learn more about &lt;a href="http://www.w3.org/community/"&gt;W3C Community and Business Groups&lt;/a&gt;.&lt;/p&gt;
+<pre>&lt;p&gt;This report was published by the &lt;a href="https://www.w3.org/community/grouphome/"&gt;Group Name&lt;/a&gt;. It is not a W3C Standard nor is it on the W3C Standards Track. Please note that under the &lt;a href="https://www.w3.org/community/about/agreements/final/"&gt;W3C Community Final Specification Agreement (FSA)&lt;/a&gt; other conditions apply. Learn more about &lt;a href="https://www.w3.org/community/"&gt;W3C Community and Business Groups&lt;/a&gt;.&lt;/p&gt;
 </pre>
 <h2>Patent Licensing Commitments</h2>
 Readers should be able to find the contribution history easily from the report. Per the Community Group process, the contribution history must be archived permanently on the W3C Web site.
 
 For final reports, W3C maintains information about which participants have signed the Final Specification Agreement and which have not. A final report must refer to the page maintained by W3C.
 <h2>Privacy Policy</h2>
-Reports must not violate the <a href="//www.w3.org/Consortium/Legal/privacy-statement">W3C Privacy Policy</a>. In practical terms, this means not tracking report users via a third party system.</body>
+Reports must not violate the <a href="https://www.w3.org/Consortium/Legal/privacy-statement">W3C Privacy Policy</a>. In practical terms, this means not tracking report users via a third party system.</body>
