Import revision of reqs.html from Wordpress revision

--- a/policies/reqs.html
+++ b/policies/reqs.html
@@ -5,14 +5,10 @@ W3C provides a means for each group Chair to publish and thereby designate the g
 Final Reports must be published on the W3C Web site. This can be achieved through <a href="https://github.com/w3c/cg-reports">mechanisms available on GitHub</a>.
 <h2>Style Sheets</h2>
 <a href="https://github.com/w3c/respec/wiki">ReSpec</a> is a widely used tool at W3C for creating specifications, and it includes four style sheets (for draft and final reports, both for Community and Business Groups); set specStatus in the configuration accordingly (e.g., specStatus = CG-DRAFT). Several documents using ReSpec are linked from the <a href="/community/reports/">reports page</a>. Please note that ReSpec is not required, but is a useful option for editors.
-<h2>W3C Logo</h2>
-The W3C logo appears in the upper left corner of the document using this markup in HTML5:
-<pre>&lt;a href=https://www.w3.org/&gt;&lt;img alt=W3C height=48 src=https://www.w3.org/Icons/w3c_home width=72&gt;&lt;/a&gt;
-</pre>
-or in XHTML:
-<pre>&lt;a href="https://www.w3.org/"&gt;&lt;img alt="W3C" height="48"
-   src="https://www.w3.org/Icons/w3c_home" width="72"/&gt;&lt;/a&gt;
-</pre>
+<h2>Logos</h2>
+To avoid confusion about standardization status, a Community Group Report must not use a <a href="https://www.w3.org/policies/logos/#org-logos">W3C organization logo</a>.
+
+A Community Group Report must use the appropriate W3C Community Group logo (<a href="https://www.w3.org/StyleSheets/TR/2021/logos/back-cg-draft.png">draft</a> or <a href="https://www.w3.org/StyleSheets/TR/2021/logos/back-cg-final.png">final</a>) in the upper left corner of the document. These logos are included automatically when using <a href="https://github.com/w3c/respec/wiki">ReSpec</a>.
 <h2>Name and Date</h2>
 The report must include:
 <ul>
