Import revision of compare.html from Wordpress revision

--- a/policies/compare.html
+++ b/policies/compare.html
@@ -62,8 +62,8 @@
 </tr>
 <tr>
 <th>Other Coordination</th>
-<td>Via Coordination Groups</td>
-<td>Via Coordination Groups</td>
+<td>Various</td>
+<td>Various</td>
 <td>Ad-hoc (e.g., organized by Community Development Lead)</td>
 <td>Direct Chair-to-Chair connectivity for Business Groups developing material intended as input to a Working Group.</td>
 </tr>
