--- a/policies/process.html
+++ b/policies/process.html
@@ -215,8 +215,16 @@ Business Group policies are the same as Community Groups except where noted belo
 
 </section>
 <section>
-<h3 id="bg-creation" class="handwriting red">Creation of a Business Group</h3>
-Business Groups are created in the same manner as Community Groups, except that a proposal is not <a href="#complete-proposal">complete</a> until at least five <em>Organizations</em> support creation of the group. Because goal of Business Groups is to grow the W3C community, we expect Business Groups to have a mix of Member and non-Member Organizations and individuals.
+<h3 id="bg-propose" class="handwriting red">Proposing a Business Group</h3>
+Business Groups are proposed in the same manner as Community Groups, except that a proposal is not <a href="#complete-proposal">complete</a> until at least five <em>Organizations</em> support creation of the group. Because goal of Business Groups is to grow the W3C community, we expect Business Groups to have a mix of Member and non-Member Organizations and individuals.
+
+<strong>Note:</strong> Business Groups are typically proposed by W3C
+staff after extensive discussion about strategic planning, budgeting,
+and resource allocation. For this reason, non-staff should not propose
+a Business Group without prior discussion with the Community
+Development Lead (who will coordinate staff discussion). Without
+sufficient discussion and coordination, the Community Development Lead
+may choose not to approve a proposed Business Group.
 
 </section>
 <section>
