* Remove unused provision about annual review; none happened in 12 years. * Clarify that the nature and degree of staff support may vary from group to group.

--- a/policies/process.html
+++ b/policies/process.html
@@ -246,14 +246,9 @@ Deliverables are the same as for Community Groups, except the published document
 
 </section>
 <section>
-<h3 id="bg-staff" class="handwriting red">Staff Involvement in Business Groups</h3>
-Business Groups do not have staff contacts, but W3C management allocates a small percentage of staff time to consult to Business Groups and help them accomplish their goals.
+  <h3 id="bg-staff" class="handwriting red">Staff Involvement in Business Groups</h3>
+W3C management may choose to allocate a small percentage of staff time to consult with Business Groups, facilitate cross-group communication, and help them accomplish their goals. The nature and degree of staff support may vary from group to group.
 
-In addition:
-<ul>
- 	<li>Business Group Chairs may request an annual review with W3C management and the technical staff, to share progress and gather feedback on technical direction.</li>
- 	<li>For Business Groups creating materials they intend as input to a Working Group (e.g., an industry-specific set of requirements), the staff will help to coordinate direct Chair-to-Chair communication.</li>
-</ul>
 </section></div>
 <div id="policies" class="tab-content">
 <section class="dark-blue">These policies are designed to encourage constructive participation and to balance IPR considerations with ease of participation.
