--- a/policies/process.html
+++ b/policies/process.html
@@ -216,7 +216,7 @@ Business Group policies are the same as Community Groups except where noted belo
 </section>
 <section>
 <h3 id="bg-propose" class="handwriting red">Proposing a Business Group</h3>
-Business Groups are proposed in the same manner as Community Groups, except that a proposal is not <a href="#complete-proposal">complete</a> until at least five <em>Organizations</em> support creation of the group. Because goal of Business Groups is to grow the W3C community, we expect Business Groups to have a mix of Member and non-Member Organizations and individuals.
+Business Groups are proposed in the same manner as Community Groups, except that a proposal is not <a href="#complete-proposal">complete</a> until at least five <em>Organizations</em> support creation of the group and the W3C staff has confirmed the expected staff resources will be available. Because goal of Business Groups is to grow the W3C community, we expect Business Groups to have a mix of Member and non-Member Organizations and individuals.
 
 <strong>Note:</strong> Business Groups are typically proposed by W3C
 staff after extensive discussion about strategic planning, budgeting,
@@ -247,7 +247,7 @@ Deliverables are the same as for Community Groups, except the published document
 </section>
 <section>
   <h3 id="bg-staff" class="handwriting red">Staff Involvement in Business Groups</h3>
-W3C management may choose to allocate a small percentage of staff time to consult with Business Groups, facilitate cross-group communication, and help them accomplish their goals. The nature and degree of staff support may vary from group to group.
+Business Groups do not automatically receive staff contacts. W3C management may choose to allocate a small percentage of staff time to consult with Business Groups, facilitate cross-group communication, and help them accomplish their goals. The nature and degree of staff support may vary from group to group.
 
 </section></div>
 <div id="policies" class="tab-content">
