Editorial: removed weird empty links

--- a/policies/process.html
+++ b/policies/process.html
@@ -200,17 +200,13 @@ A Community Group may continue to exist after a Working Group has been chartered
 
 W3C recommends that once a Working Group has taken up a Community Group or Business Group Specification, the Community or Business Group should no longer develop the same material in parallel. Working Group licensing commitments are limited to the deliverables of the Working Group, so commitments do not follow text that is taken up by other groups (Community Groups or Working Groups).
 
-</section><a href="https://www.w3.org/Guide/process/cg-transition.html"></a>
+</section>
 
 </div>
-<a href="https://www.w3.org/Guide/process/cg-transition.html">
-</a>
-<div id="bgroups" class="tab-content"><a href="https://www.w3.org/Guide/process/cg-transition.html">
-</a>
 
-<section class="dark-blue"><a href="https://www.w3.org/Guide/process/cg-transition.html">
-</a>
-<p id="business-process"><a href="https://www.w3.org/Guide/process/cg-transition.html">Business Groups are open to all (including companies, non-profits, government agencies, research institutes, individuals), but parties that are not W3C Members pay a </a><a href="/community/about/agreements/fees/">fee</a> to participate. That fee is less than W3C Membership and grants fewer benefits. Business Groups are designed to provide stakeholders in particular industries with a forum to develop industry-specific applications of Web technology, to create a strong liaison between a particular industry and the Web community, or to solve an industry-specific issue without an initial assumption of which Web technologies apply.</p>
+<div id="bgroups" class="tab-content">
+<section class="dark-blue">
+<p id="business-process">Business Groups are open to all (including companies, non-profits, government agencies, research institutes, individuals), but parties that are not W3C Members pay a <a href="/community/about/agreements/fees/">fee</a> to participate. That fee is less than W3C Membership and grants fewer benefits. Business Groups are designed to provide stakeholders in particular industries with a forum to develop industry-specific applications of Web technology, to create a strong liaison between a particular industry and the Web community, or to solve an industry-specific issue without an initial assumption of which Web technologies apply.</p>
 Business Group policies are the same as Community Groups except where noted below.
 
 </section>
