--- a/policies/process.html
+++ b/policies/process.html
@@ -200,10 +200,7 @@ A Community Group may continue to exist after a Working Group has been chartered
 
 W3C recommends that once a Working Group has taken up a Community Group or Business Group Specification, the Community or Business Group should no longer develop the same material in parallel. Working Group licensing commitments are limited to the deliverables of the Working Group, so commitments do not follow text that is taken up by other groups (Community Groups or Working Groups).
 
-</section>
-
-</div>
-
+</section></div>
 <div id="bgroups" class="tab-content">
 <section class="dark-blue">
 <p id="business-process">Business Groups are open to all (including companies, non-profits, government agencies, research institutes, individuals), but parties that are not W3C Members pay a <a href="/community/about/agreements/fees/">fee</a> to participate. That fee is less than W3C Membership and grants fewer benefits. Business Groups are designed to provide stakeholders in particular industries with a forum to develop industry-specific applications of Web technology, to create a strong liaison between a particular industry and the Web community, or to solve an industry-specific issue without an initial assumption of which Web technologies apply.</p>
@@ -242,52 +239,23 @@ Deliverables are the same as for Community Groups, except the published document
 
 </section>
 <section>
-  <h3 id="bg-staff" class="handwriting red">Staff Involvement in Business Groups</h3>
+<h3 id="bg-staff" class="handwriting red">Staff Involvement in Business Groups</h3>
 Business Groups do not automatically receive staff contacts. W3C management may choose to allocate a small percentage of staff time to consult with Business Groups, facilitate cross-group communication, and help them accomplish their goals. The nature and degree of staff support may vary from group to group.
 
 </section></div>
 <div id="policies" class="tab-content">
 <section class="dark-blue">These policies are designed to encourage constructive participation and to balance IPR considerations with ease of participation.
 
-Violations of these policies <span class="rfc2119">should</span> be brought to the attention of the Community Development Lead. The Community Development Lead is authorized to ban participants for violations of this policy or the signed Agreements, and also to reinstate them. Banned participants may appeal to the Head of W3C Communications.
+Community Group participants agree to abide by the terms and spirit of the <a href="https://www.w3.org/policies/code-of-conduct/">W3C Code of Conduct</a>. 
+
+Violations of Community and Business Group policies <span class="rfc2119">should</span> be brought to the attention of the Community Development Lead. The Community Development Lead is authorized to ban participants for violations of this policy or the signed Agreements, and also to reinstate them. Banned participants may appeal to the W3C CEO.
 
 </section>
 <section>
 <h3 id="ipr" class="handwriting red">Summary of Copyright and Patent Policies for Community Groups</h3>
-The legal policies designed for Community Groups seek to balance the concerns of both implementers and intellectual property (IPR) holders. This section gives an informative overview of the two license agreements involved:
-<ul>
- 	<li><a href="cla">W3C Community Contributor License Agreement (CLA)</a></li>
- 	<li><a href="final">W3C Community Final Specification Agreement</a></li>
-</ul>
-</section>
-<section>
-<h4 id="copyright">Copyright</h4>
-All participant contributions to a Specification produced by the group are made available under a permissive copyright license that allows the creation of derivative works subject to attribution requirements.
+The legal policies designed for Community Groups seek to balance the concerns of both implementers and intellectual property (IPR) holders. Please see the <a href="https://www.w3.org/community/about/process/summary/">Patent and Copyright Policy Summary</a>, which covers the <a href="cla">W3C Community Contributor License Agreement (CLA)</a> and the <a href="final">W3C Community Final Specification Agreement</a>.
 
-A Business Group <span class="rfc2119">may</span> choose to publish its document under the <a href="http://www.w3.org/Consortium/Legal/2002/copyright-documents-20021231">W3C Document Licence</a>.
-
-</section>
-<section>
-<h4 id="patents">Patents</h4>
-The patent policy has two steps:
-<ol>
- 	<li><strong>Contributor Agreement</strong>. A participant that makes a contribution to a specification produced by the group agrees to Royalty-Free patent licenses for the contribution. This commitment is governed by the <a href="cla">W3C Community Contributor License Agreement (CLA)</a>. <strong>Note</strong>: The CLA provides patent rights only to individual Contributions. W3C will provide mechanisms for participants to indicate clearly their Contributions.</li>
- 	<li><strong>Final Specification Agreement</strong>. When the group has completed work on the specification and wishes to promote broader deployment, the Chair issues a <strong>call for final commitments</strong>. Participants make <em>voluntary</em> Royalty-Free patent license commitments over the <em>entire</em> specification by
-executing the <a href="final">W3C Community Final Specification Agreement</a>. In addition, the Community Final Specification Agreement involves a commitment so that material that advances to W3C Recommendation also benefits (automatically) from a Royalty-Free commitment.</li>
-</ol>
-The two-step process is designed to:
-<ul>
- 	<li>make it possible to start a group quickly, since organizations may not be required to evaluate portfolios against a scope statement.</li>
- 	<li>make it easier for organizations to join a group, since an organization's initial commitment only extends to the organization's own contributions.</li>
- 	<li>provide implementers with some patent protection during development of a specification, and patent protection for the final specification from those signing the Final Specification Agreement.</li>
-</ul>
-W3C has a preference for organizational, rather than individual commitments. Requests to participate in an individual capacity without a corresponding organizational commitment will be subject to approval by the W3C staff; such approval to be granted or denied in the W3C Staff’s sole discretion.
-
-</section>
-<section>
-<h4 id="disclosure">Disclosure</h4>
-The policies do not define any patent disclosure obligations.
-
+W3C has a preference for organizational, rather than individual commitments. Requests to participate in an individual capacity without a corresponding organizational commitment will be subject to approval by the W3C staff; such approval to be granted or denied in the W3C Staff’s sole discretion. See the <a href="https://www.w3.org/community/about/process/guidelines-for-evaluating-individual-requests-to-participate-in-a-group/"> Guidelines for Evaluating Individual Requests to Participate in a Group</a>.
 </section>
 <section>
 <h3 id="general-policies" class="handwriting red">General Communications Policies</h3>
@@ -322,4 +290,5 @@ All Participants agree to the following general communications policies:
 </dl>
 </section></div>
 </div>
+
 <!-- #tabs --></body>
