Reports must be public

--- a/policies/process.html
+++ b/policies/process.html
@@ -135,6 +135,7 @@ Community Group deliverables may be anything, including documents, test suites, 
 
 The label "Community Group Report" refers to any document produced by a Group. Some Community Group Reports are Specifications. The following rules apply to Specifications:
 <ul>
+  <li>they must be publicly available.</li>
  	<li>drafts are governed by <a href="cla">Community Contributor License Agreement (CLA)</a>. W3C will provide a template for including copyright information.</li>
  	<li>they <span class="rfc2119">must</span> include the name the group that published the deliverables and link to a public page about the group.</li>
  	<li>they <span class="rfc2119">must</span> include a publication date.</li>
