--- a/policies/compare.html
+++ b/policies/compare.html
@@ -65,7 +65,7 @@ The following table compares some key elements of W3C group types. See also <a h
 <td>Membership or Invited Expert (no fee)</td>
 <td>Membership or Invited Expert (no fee)</td>
 <td>None</td>
-<td><a href="/community/about/fees/">Annual fees</a></td>
+<td><a href="/community/about/fees/">Annual fees</a> for non-Members</td>
 </tr>
 <tr>
 <th>Confidentiality of activities</th>
