Indicate explicitly that commercial purposes grounds for rejection.

--- a/policies/process.html
+++ b/policies/process.html
@@ -51,7 +51,7 @@ Community Submissions must not use a style that will cause them to be confused w
 </ul>
 Once a proposal is complete, W3C announces the creation of the group (which includes its software infrastructure). This date is called the <span id="launchdate">“launch date.”</span>
 
-The Community Development Lead does not formally approve proposals but <span class="rfc2119">may</span> reject a proposal for a Community Group when the scope is likely to cause offense or confusion, is frivolous, or is overly broad.
+The Community Development Lead does not formally approve proposals but <span class="rfc2119">may</span> reject a proposal for a Community Group when the scope is likely to cause offense or confusion, appears primarily intended for commercial purposes, is frivolous, or is overly broad.
 
 </section>
 <section>
