make copyright-only more obvious

--- a/policies/guidelines-for-evaluating-individual-requests-to-participate-in-a-group.html
+++ b/policies/guidelines-for-evaluating-individual-requests-to-participate-in-a-group.html
@@ -19,6 +19,7 @@ If you have any questions about participation as an individual, please write to 
 <h3 id="considerations">Considerations</h3>
 Below are some of the considerations the W3C Staff apply when evaluating requests to join as an individual.
 <ul>
+ 	<li>Is the group a "copyright only" group (that is: it does not publish Specifications)? If so, W3C Members join as usual, but employees of non-Members can joint automatically as individuals because we are not seeking patent commitments.</li>
  	<li>Was the request intentional (that is, not a mistake)?</li>
  	<li>Is the person affiliated with a W3C Member? Please direct them to our <a href="https://www.w3.org/community/about/faq/#can-an-individual-who-works-for-a-w3c-member-join-a-community-or-business-group">FAQ on Member participation</a>.</li>
  	<li>If the person is affiliated with a non-Member and owns the rights to materials the person might contribute, we will usually approve the request.</li>
@@ -26,7 +27,6 @@ Below are some of the considerations the W3C Staff apply when evaluating request
  	<li>Is the organization aware of the person's request to participate? Does the person have appropriate permission to participate from the organization (e.g., acceptable under a moonlighting policy/written permission)? Some companies have broad ownership claims to employee work product. If the company claims ownership in the employee's work, the company should be making the legal commitments.</li>
  	<li>Is the person a consultant acting as a proxy for an organization? If so, the organization should join.</li>
  	<li>Is the person using an organizational email address? That can lead to confusion among colleagues or other parties about representation and should be avoided.</li>
- 	<li>Is the group producing Specifications that do not require patent commitments? This is generally known by looking at the mission statement / description on the group's home page. Because we are not seeking licensing commitments, individual participation is generally ok (though there are instances when the chair has indicated a preference for organizational participation). If not sure, ask the Chairs before approving.</li>
  	<li>Does the person work for an entity (e.g., EU Project, or government agency) that has IPR policies compatible with the CLA? If so it may be ok to approve the request.</li>
 </ul>
 The W3C Staff may request additional context from the person who made the request and may ask other individuals (e.g., the  Chair) for additional context.</body>
