moved 2 requirements from process to this doc in anticipation of shrinking process

--- a/policies/reqs.html
+++ b/policies/reqs.html
@@ -43,4 +43,11 @@ Readers should be able to find the contribution history easily from the report. 
 
 For final reports, W3C maintains information about which participants have signed the Final Specification Agreement and which have not. A final report must refer to the page maintained by W3C.
 <h2>Privacy Policy</h2>
-Reports must not violate the <a href="https://www.w3.org/Consortium/Legal/privacy-statement">W3C Privacy Policy</a>. In practical terms, this means not tracking report users via a third party system.</body>
+Reports must not violate the <a href="https://www.w3.org/Consortium/Legal/privacy-statement">W3C Privacy Policy</a>. In practical terms, this means not tracking report users via a third party system.
+
+<h2>Additional Requirements for Final Reports</h2>
+
+ <p>A version of the Specification must be available in English.</p>
+ <p>The content of the Specification snapshot at that URL must not change other than for minor editorial changes.</p>
+</body>
+  
